...
                    "Whether you're looking for a playful puppy, a cuddly kitten, or a loyal companion, we've got a wide selection of adorable pets waiting to meet you.",
                    style: TextStyle(color: Colors.black, fontSize: 16, height: 1.5),
                  ),
                  const SizedBox(height: 15),
                  Center(
                    child: MyButton(
                      text: "Get Started",
                      onTap: () {
                        Navigator.pushNamed(context, '/login_page');
                      },
                    ),
                  )
                ],
...
